--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
       <!-- HEADER -->
       <header class="header page__header">
-        <a href=""><img class="header__logo" src="./images/header-logo.svg" alt="логотип"></a>
+        <a href="#"><img class="header__logo" src="./images/header-logo.svg" alt="логотип"></a>
         <div class="header__lang">
-            <a href="" class="header__lang-item header__lang-item_active">Ru</a>
-            <a href="" class="header__lang-item">En</a>
+            <a href="#" class="header__lang-item header__lang-item_active">Ru</a>
+            <a href="#" class="header__lang-item">En</a>
         </div>
       </header>
 
@@ -27,8 +27,10 @@
         <section class="main__lead lead">
           <h1 class="lead__title">Путешествия по России</h1>
           <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-          <img class="lead__image" src="./images/lead-polka.jpg" alt="боковая полка ж/д вагона">
-          <p class="lead__image-caption">ваша полка — верхняя</p>
+          <figure class="lead__figure">
+            <img class="lead__image" src="./images/lead-polka.jpg" alt="боковая полка ж/д вагона">
+            <figcaption class="lead__image-caption">ваша полка — верхняя</figcaption>
+          </figure>
         </section>
 
         <!-- ITRO -->
