--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="page">
 
       <!-- HEADER -->
-      <header class="header page__header">
-        <a href="#"><img class="header__logo" src="./images/header-logo.svg" alt="логотип"></a>
+      <header class="header">
+        <a href="#" class="header__link"><img class="header__logo" src="./images/header-logo.svg" alt="логотип"></a>
         <div class="header__lang">
             <a href="#" class="header__lang-item header__lang-item_active">Ru</a>
             <a href="#" class="header__lang-item">En</a>
@@ -24,7 +24,7 @@
 
       <main class="main">
         <!-- LEAD -->
-        <section class="main__lead lead">
+        <section class="lead">
           <h1 class="lead__title">Путешествия по России</h1>
           <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
           <figure class="lead__figure">
@@ -34,7 +34,7 @@
         </section>
 
         <!-- ITRO -->
-        <section class="main__intro intro">
+        <section class="intro">
           <h2 class="intro__title">Чего мы там не видели?</h2>
           <p class="intro__text">
             По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в
@@ -157,7 +157,7 @@
       </section>
 
         <!-- COVER -->
-        <section class="main__cover cover">
+        <section class="cover">
           <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
